--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ python:
 install: pip install .
 script: python setup.py test
 deploy:
-  on:
-    branch: master
+- on:
+    python: '3.6'
+    tags: true
   provider: pypi
   distributions: sdist bdist_wheel
   user: efl_phx
