--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,5 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = py35, py36, py37, py38
+envlist = py3{11,10,9}
 
 [testenv]
-commands = python setup.py test
+commands = python -m unittest
