--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,10 @@ name: CI
 
 on:
   - push
+  - pull_request:
+      - edited
+      - opened
+      - synchronize
 
 jobs:
   build:
@@ -15,9 +19,9 @@ jobs:
           - 3.11
 
     steps:
-      - uses: actions/checkout
+      - uses: actions/checkout@v3
       - name: Python ${{ matrix.python-version }}
-        uses: actions/setup-python
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install Dependencies
