--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,11 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - 3.9
-          - 3.10
-          - 3.11
+          # Note: Use quotes to avoid float cast - especially important if the
+          # version number ends with 0!
+          - "3.9"
+          - "3.10"
+          - "3.11"
 
     steps:
       - uses: actions/checkout@v3
