--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,9 @@ jobs:
           - "3.11"
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Python ${{ matrix.python-version }}
+      - name: Clone Repo
+        uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
