--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,13 @@
 name: CI
 
 on:
-  - pull_request
-  - push
+  pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
+      - synchronize
+  push:
 
 jobs:
   build:
