--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,10 @@
 
 [project]
 name = "phx-filters-iso"
-version = "3.0.0"
+version = "3.1.0"
 description = "Extends phx-filters, adding filters for interpreting ISO codes."
 readme = "README.rst"
-requires-python = ">= 3.6"
+requires-python = ">= 3.10"
 license = { file = "LICENCE.txt" }
 authors = [
     { email = "Phoenix Zerin <phx@phx.nz>" }
@@ -32,15 +32,15 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.9",
     "Topic :: Software Development :: Libraries :: Python Modules",
     'Topic :: Text Processing :: Filters',
 ]
 
 dependencies = [
-    'phx-filters',
+    'phx-filters >= 3.4.0',
     'iso3166',
     'language_tags',
     'py-moneyed',
